# mirp-avr

./: .#Makefile  .gitignore  CMakeLists.txt  Makefile  Makefile.1  Makefile.no  README.md  mirp.cpp  mirp.h
config/: esp.h
lib/: uarct.cno  uart.no
modules/: config.cpp  config.h  stack.h
src/: client_mode.cpp  macros.h  standalone_mode.cpp
src/comm/: serial.cpp  serial.h
src/comm/adc/: adc.cpp  adc.h
src/comm/esp8266/: esp.cpp  esp.h
src/comm/pwm/: pwm.h
src/comm/spi/: spi.cpp  spi.h
src/comm/uart/: uart.cpp  uart.h
src/constants/: command.h  datatypes.h  msg.h
src/debug/: stdmsg.cpp  stdmsg.h
